--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+  
+
+ 	<meta name="keywords" content="Réseau social privé, exclusivement pour Groupomania et ses collaborateurs">
+     <meta name="description" content="Notre entreprise, spécialisée dans la grande distribution, est en pleine expansion."/>
+     <meta name="robots" content="index,follow" />
+     <title>Groupomania</title>
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
@@ -19,7 +25,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
- 
+
 </body>
 
 </html>
